# clear-coding-agent

./: .gitignore  LICENSE  README.md  clear_coding_agent.py  pyproject.toml
tests/: test_clear_coding_agent.py
